Documentation edits made through Mintlify web editor

--- a/docs/organization-settings/discipline.mdx
+++ b/docs/organization-settings/discipline.mdx
@@ -106,9 +106,9 @@ The Discipline Access settings control which roles in your organization can subm
 
 You can also configure a password to protect the discipline form. By default, a password is applied to the form.
 
-<Info>
+<Note>
   This is useful if you have trainers with the mobile app that can submit positional ratings but shouldn't be able to submit infractions
-</Info>
+</Note>
 
 ## Notifications Tab
 
