Add notes field to positional ratings form
- Add notes column to ratings table for optional additional details
- Add "Additional Details" text field to rating form after rating criteria
- Include notes in rating submission API
- Add English and Spanish translations for the new field

--- a/locales/en/forms.json
+++ b/locales/en/forms.json
@@ -37,7 +37,10 @@
       "crushingIt": "Crushing It"
     },
     "feedbackTitle": "Did you share this feedback?",
-    "feedbackBody": "Make sure {{name}} knows the WHY."
+    "feedbackBody": "Make sure {{name}} knows the WHY.",
+    "additionalDetails": "Additional Details",
+    "additionalDetailsHelper": "Optional notes about this rating",
+    "additionalDetailsPlaceholder": "Add any additional context or observations..."
   }
 }
 
